--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width" initial-scale=1 ">
+	<meta name="viewport" content="width=device-width">
 	<title>My Resume</title>
-	<link href="index.css" rel="stylesheet " type="text/css " />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="index.css" rel="stylesheet " type="text/css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
 	<style>
 
@@ -18,7 +19,7 @@
 			
 		</div>
     <div class="image">
-    <img src="./image.jpg" >
+    <img src="./image.jpg" alt="myphoto">
     </div>
     <div class="details">
     <div class="icons">
@@ -81,72 +82,72 @@
       <h3>PROFESSIONAL</h3>
 			<div class="slidecontainer">
 			  <h5>UI Design</h5>
-			  <input type="range" min="1" max="100" value="70" class="slider" id="myRange"><span id="demo"></span>
+			  <input type="range" min="1" max="100" value="70" class="slider" ><span id="demo"></span>
 			</div>
 			
 			<h5>React Js</h5>
 			<div class="slidecontainer">
-			  <input type="range" min="1" max="100" value="80" class="slider" id="myRange">
+			  <input type="range" min="1" max="100" value="80" class="slider" >
 			</div>
 	
 			<h5>Mongo DB</h5>
 			<div class="slidecontainer">
-			  <input type="range" min="1" max="100" value="60" class="slider" id="myRange">
+			  <input type="range" min="1" max="100" value="60" class="slider" >
 			</div>
 			
 			<h5>Javascript</h5>
 			<div class="slidecontainer">
-			  <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+			  <input type="range" min="1" max="100" value="50" class="slider" >
 			</div>
 			
 			<h5>Redux</h5>
 			<div class="slidecontainer">
-			  <input type="range" min="1" max="100" value="90" class="slider" id="myRange">
+			  <input type="range" min="1" max="100" value="90" class="slider" >
 			</div>  
     </div>
   </div>
 	
   <div class="column">
-    <div class="card" id="cardbox">
+    <div class="card" id="cardbox1">
       <h3>PERSONAL</h3>
 			
 			<h5>Punctual</h5>
 			<div class="slidecontainer">
-			  <input type="range" min="1" max="100" value="60" class="slider" id="myRange">
+			  <input type="range" min="1" max="100" value="60" class="slider" >
 			</div>
 			
 			<h5>Leadership</h5>
 			<div class="slidecontainer">
-			  <input type="range" min="1" max="100" value="70" class="slider" id="myRange">
+			  <input type="range" min="1" max="100" value="70" class="slider" >
 			</div>
 			
 			<h5>Creative</h5>
 			<div class="slidecontainer">
-			  <input type="range" min="1" max="100" value="80" class="slider" id="myRange">  
+			  <input type="range" min="1" max="100" value="80" class="slider" >  
 			</div>
 			
 			<h5>Adaptable</h5>
 			<div class="slidecontainer">
-			  <input type="range" min="1" max="100" value="70" class="slider" id="myRange"> 
+			  <input type="range" min="1" max="100" value="70" class="slider" > 
 			</div>
     </div>
   </div>
   <div class="column">
-    <div class="card" id="cardbox">
+    <div class="card" id="cardbox2">
       <h3>LANGUAGE</h3>
 			<h5>English</h5>
 			<div class="slidecontainer">
-			  <input type="range" min="1" max="100" value="60" class="slider" id="myRange">
+			  <input type="range" min="1" max="100" value="60" class="slider" >
 			</div>
 			
 			<h5>Tamil</h5>
 			<div class="slidecontainer">
-			  <input type="range" min="1" max="100" value="80" class="slider" id="myRange">
+			  <input type="range" min="1" max="100" value="80" class="slider" >
 			</div>
 			
 			<h5>Telugu</h5>
 			<div class="slidecontainer">
-			  <input type="range" min="1" max="100" value="70" class="slider" id="myRange">
+			  <input type="range" min="1" max="100" value="70" class="slider" >
 			</div>
 			
 			
@@ -156,7 +157,7 @@
 </div>
 
   
-</div>
+
 
 	<div class="topics">EDUCATION</div>
 	<div class="timeline">
@@ -198,7 +199,7 @@
 	<div class="card" id="footer">
 	<div class="card-content" id="footer-content">
 	
-	<p><h3 id="footer-paragraph">My Interest are baking cakes and ice creams,now started doing cratfs work,playing games.</h3></p><br>
+	<h3 id="footer-paragraph">My Interest are baking cakes and ice creams,now started doing cratfs work,playing games.</h3><br>
 	
 	<div class="footer_items">
 	<i class="fa fa-cart-plus" style="font-size:20px" ><br>Shopping</i>
